fix: settings collapsable header for electron

--- a/src/app/features/config/config-section/config-section.component.scss
+++ b/src/app/features/config/config-section/config-section.component.scss
@@ -29,7 +29,6 @@ $this-panel-padding-left-right: 12px;
 :host ::ng-deep .collapsible-header {
   font-size: 16px;
   margin-top: 0;
-  display: block;
   padding: 10px $this-panel-padding-left-right;
 
 }
